cmake_minimum_required (VERSION 2.8)
project (algorithm)

MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(SUBDIRS "${PROJECT_SOURCE_DIR}/src")
FOREACH(subdir ${SUBDIRS})
    aux_source_directory("${PROJECT_SOURCE_DIR}/src/${subdir}" INCLUDE_LIST)
    include_directories("${PROJECT_SOURCE_DIR}/src/${subdir}")
ENDFOREACH()

SET(EXECFILES "")
SUBDIRLIST(EXECSUBDIRS "${PROJECT_SOURCE_DIR}/test")
FOREACH(execsubdir ${EXECSUBDIRS})
    FILE(GLOB execfile RELATIVE "${PROJECT_SOURCE_DIR}/test/${execsubdir}" "${PROJECT_SOURCE_DIR}/test/${execsubdir}/*.cpp")
    LIST(APPEND EXECFILES ${execfile})
ENDFOREACH()

MESSAGE(${EXECFILES})
FOREACH(execfile ${EXECFILES})
    LIST(APPEND ${INCLUDE_LIST} ${execfile})
    MESSAGE(${execfile} "${INCLUDE_LIST}")
    add_executable("${execfile}"  ${INCLUDE_LIST})
    LIST(REMOVE_ITEM ${INCLUDE_LIST} ${execfile})
ENDFOREACH()
